crates/kyzo-core/tests/compile_fail/bound_op_mint_refused.stderr
error[E0422]: cannot find struct, variant or union type `BoundOp` in crate `kyzo`
  --> tests/compile_fail/bound_op_mint_refused.rs:22:39
   |
22 |     let refused_bound_op_mint = kyzo::BoundOp {
   |                                       ^^^^^^^ not found in `kyzo`
